--- a/sass/pages/_writing.scss
+++ b/sass/pages/_writing.scss
@@ -40,7 +40,7 @@
             text-align: center;
             padding: 20px 40px;
             text-transform: uppercase;
-            border-radius: 5px;
+            border-radius: 10px;
 
             
             a {
